add Reporting